# Telephonist

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  AllInOne.dockerfile  Dockerfile  Makefile  Pipfile  README.md  READONLY.md  main.py  main_debug.py  main_prod.py  populate_database.py  pyproject.toml  sqlite3.db  test.py
alembic/: env.py
certs/: dev_certificate.conf
docker/: docker-compose.yaml
k8s/: ingress-nginx-controller.yaml
k8s/telephonist-all-in-one/: Chart.yaml  values.yaml
k8s/telephonist-all-in-one/templates/: NOTES.txt  _helpers.tpl  ingress.yaml
locales/en/LC_MESSAGES/: messages.pot
locales/ru/LC_MESSAGES/: messages.mo  messages.pot
scripts/: generate_dev_certificate.sh  get_version.py  update_locales.sh
server/: app.py  app_debug.py  database.py  dependencies.py  encryption.py  exceptions.py  logging.py  settings.py  spa.py  version.py  ws_root_router.py
server/application_api/: __init__.py  _utils.py  rest_api.py  ws_api.py
server/auth/: __init__.py  _scopes.py  actions.py  dependencies.py  exceptions.py  models.py  routes.py  services.py  token.py  tokens.py  utils.py
server/auth/internal/: dependencies.py  exceptions.py  schema.py  session.py  sessions.py  token.py  utils.py
server/auth/models/: __init__.py  auth.py
server/auth/sessions/: __init__.py  _backend.py  dependencies.py  in_memory.py  redis.py
server/channels/: __init__.py  broadcast.py  controller.py  helper.py  wscode.py
server/common/: __init__.py  models.py
server/common/actions/: __init__.py  application.py  events.py  logs.py  utils.py
server/common/channels/: __init__.py  auth.py  backplane.py  hub.py  layer.py
server/common/internal/: __init__.py  application.py  event_bus.py  events.py  logs.py  utils.py
server/common/models/: __init__.py  _pagination.py  misc.py  pagination.py  type_registry.py
server/common/services/: application.py  events.py  logs.py  (+2 more)
server/database/: __init__.py  application.py  application_settings.py  connection_info.py  counter.py  events.py  log.py  registry.py  security_code.py  sequence.py  server.py  session.py  task.py
server/l10n/: __init__.py  lazy_l10n.py  localization.py
server/models/: auth.py
server/routes/: __init__.py  _common.py  auth.py  users.py
server/telephonist/: auth.py  models.py  routes.py  utils.py
server/user_api/: __init__.py  applications_router.py  auth.py  connections_router.py  events_router.py  logs_router.py  search_router.py  tasks_router.py  users_router.py  ws_router.py
server/utils/: annotations.py
tests/: conftest.py  test_applications.py  test_auth.py  test_backplane.py  test_jwt.py  test_telephonist_ws.py  test_transit.py  test_utils.py  utils.py
tests/api_tests/: conftest.py
uds_server/: app.py
(+114 files in other folders)
