[tool.isort]
profile = "black"

[tool.black]
line-length = 88

[tool.poetry]
name = "telephonist"
version = "0.1.0"
description = ""
authors = ["MaratBR <marat01q@gmail.com>"]
license = "Apache-2.0 License"

[tool.poetry.dependencies]
python = "^3.9"
beanie = "^1.8.10"
fastapi = "^0.70.0"
# pydantic = "^1.8.2"
pydantic = {extras = ["dotenv"], git="https://github.com/samuelcolvin/pydantic"} #version = "^1.8.2"
uvicorn = "^0.16.0"
email-validator = "1.1.3"
passlib = "1.7.4"
aioredis = "2.0.0"
nanoid = "^2.0.0"
python-multipart = "^0.0.5"
websockets = "^10.0"
python-jose = {extras = ["cryptography"], version = "^3.2.0"}
loguru = "^0.5.3"
bcrypt = "^3.2.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
docker = "^5.0.3"
pytest-asyncio = "^0.16.0"
black = "^21.12b0"
isort = "^5.10.1"
flake8 = "^4.0.1"
pre-commit = "^2.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
